# django-login-default

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml
django_login_default/: __init__.py  apps.py  decorators.py  middleware.py  mixins.py  urls.py  views.py
django_login_default/templates/django_login_default/: dashboard.html  index.html  public.html
django_login_default/templatetags/: django_login_default_tags.py
django_login_default/tests/: test_middleware.py  test_models.py
sample_project/: requirements.txt
sample_project/sample_project/: asgi.py  settings.py  urls.py  wsgi.py
sample_project/templates/: base.html
sample_project/templates/registration/: login.html
