[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-login-default"
version = "0.1.2"
description = "Django middleware that makes login required by default"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Matthias Baer", email = "matthias.r.baer@googlemail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "Django>=4.2",
]

[project.urls]
Homepage = "https://github.com/maroba/django-login-default"
Repository = "https://github.com/maroba/django-login-default"
Issues = "https://github.com/maroba/django-login-default/issues"

[tool.setuptools.packages.find]
include = ["django_login_default*"]
